--- a/css/style-childpages.css
+++ b/css/style-childpages.css
@@ -1,6 +1,6 @@
 html, body {
     font-family: "courier";
-    background-color: #c9e3ff;
+    background-color: #ffffff;
 }
 
 h1 {
@@ -23,22 +23,23 @@ a:focus {
     color: #38007b;
 }
 
-.page-wrap {
+/*.page-wrap {
     width: 100%;
     height: 100%;
     margin-top: 0px;
     margin-right: 0px;
     margin-bottom: 0px;
     margin-left: 0px;
-}
+}*/
 
 footer {
-    width: 100%;
-    background-color: #8DC63F;
-    display: block;
-    float: left;
-    clear: both;
-    text-align:center;
+    position:fixed;
+    left:0px;
+    bottom:0px;
+    height:60px; /*If it isn't about this or a little lower it sinks below the bottom of the browser border*/
+    width:100%;
+    /*Background is better just as the body background color, so I commented it out*/
+    /*background: #454545;*/
 }
 
 .footer-bottom {
@@ -49,7 +50,7 @@ footer {
 }
 
 .footer-menu a {
-    color: #FFFFFF;
+    color: #000000;
     float: left;
     font-size: medium;
     list-style-type: none;
@@ -65,7 +66,9 @@ footer {
     list-style-type: none;
     text-decoration: none;
 }
+
 .footer-menu {
+    display: inline-block;
     text-decoration: none;
     width: auto;
     text-align: center;
